Define \__int_eval:n and \__dim_eval:n, they reduce the need for patching
These internal commands are \etex_numexpr:D #1 \tex_relax:D (and dimexpr
analogue) when there is no debugging, and do the appropriate checks otherwise.
They are also more compact than \__int_eval:w ... \__int_eval_end:.

--- a/l3experimental/xcoffins/xcoffins.dtx
+++ b/l3experimental/xcoffins/xcoffins.dtx
@@ -894,7 +894,7 @@
 \NewDocumentCommand \CoffinHeight { m }
   { \coffin_ht:N #1 }
 \NewDocumentCommand \CoffinTotalHeight { m }
-  { \__dim_eval:w \coffin_ht:N #1 + \coffin_dp:N #1 \__dim_eval_end: }
+  { \__dim_eval:n { \coffin_ht:N #1 + \coffin_dp:N #1 } }
 \NewDocumentCommand \CoffinWidth { m }
   { \coffin_wd:N #1 }
 %    \end{macrocode}
