--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1584,7 +1584,7 @@
       }
       {
         \tex_penalty:D
-          \__int_eval:w \g_@@_interpar_penalty_user_tl \__int_eval_end:
+          \__int_eval:n { \g_@@_interpar_penalty_user_tl }
         \tl_gclear:N \g_@@_interpar_penalty_user_tl
       }
     \bool_gset_false:N \g_galley_no_break_next_bool
@@ -1863,18 +1863,15 @@
 \cs_new_protected:Npn \@@_parshape_set_indents:NN #1#2
   {
     \tex_parshape:D
-      \__int_eval:w
-        \int_min:nn { \seq_count:N #1 } { \seq_count:N #2 }
-      \__int_eval_end:
+      \__int_eval:n
+        { \int_min:nn { \seq_count:N #1 } { \seq_count:N #2 } }
       \seq_mapthread_function:NNN #1 #2
         \@@_parshape_set_indents:nn
   }
 \cs_new:Npn \@@_parshape_set_indents:nn #1#2
   {
-    \__dim_eval:w \l_galley_total_left_margin_dim + ( #1 ) \__dim_eval_end:
-    \__dim_eval:w
-      \l_galley_text_width_dim - ( ( #1 ) + ( #2 ) )
-    \__dim_eval_end:
+    \__dim_eval:n { \l_galley_total_left_margin_dim + #1 }
+    \__dim_eval:n { \l_galley_text_width_dim - ( #1 + #2 ) }
   }
 %    \end{macrocode}
 %   Calculating cutouts is by far the most complex operation here. The
@@ -2228,7 +2225,7 @@
 \cs_new_protected:Npn \galley_display_widow_penalties_set:n #1
   {
     \etex_displaywidowpenalties:D
-      \__int_eval:w \clist_count:n {#1} + 1 \__int_eval_end:
+      \__int_eval:n { \clist_count:n {#1} + 1 }
       \clist_map_function:nN {#1} \@@_set_aux:n
       0 \exp_stop_f:
   }
@@ -2236,7 +2233,7 @@
 \cs_new_protected:Npn \galley_widow_penalties_set:n #1
   {
     \etex_widowpenalties:D
-      \__int_eval:w \clist_count:n {#1} + 1 \__int_eval_end:
+      \__int_eval:n { \clist_count:n {#1} + 1 }
       \clist_map_function:nN {#1} \@@_set_aux:n
       0 \exp_stop_f:
   }
@@ -2287,7 +2284,7 @@
 \cs_new_protected:Npn \galley_display_club_penalties_set:n #1
   {
     \etex_clubpenalties:D
-      \__int_eval:w \clist_count:n {#1} + 1 \__int_eval_end:
+      \__int_eval:n { \clist_count:n {#1} + 1 }
       \clist_map_function:nN {#1} \@@_set_aux:n
       0 \exp_stop_f:
     \@@_calc_interline_penalties:
@@ -2314,17 +2311,18 @@
   {
     \int_compare:nNnTF { \etex_interlinepenalties:D 0 } = 0
       {
-        \etex_interlinepenalties:D 1 = \__int_eval:w (#1) \__int_eval_end:
+        \etex_interlinepenalties:D 1 = \__int_eval:n {#1}
         \@@_calc_interline_penalties:
       }
       {
         \cs_set:Npn \@@_set_interline_penalty_auxii:n ##1
           {
-            \__int_eval:w
-              \etex_interlinepenalties:D ##1
-               - \etex_interlinepenalties:D \etex_interlinepenalties:D 0
-               + (#1)
-            \__int_eval_end:
+            \__int_eval:n
+              {
+                \etex_interlinepenalties:D ##1
+                - \etex_interlinepenalties:D \etex_interlinepenalties:D 0
+                + #1
+              }
           }
         \exp_args:Nf \@@_set_interline_penalty:nn
           { \clist_count:N \l_galley_line_penalties_clist } {#1}
@@ -2339,10 +2337,10 @@
       \int_step_function:nnnN { #1 + 1 } { 1 }
         { \etex_interlinepenalties:D 0 - 1 }
         \@@_set_interline_penalty_auxii:n
-      \__int_eval:w (#2) \__int_eval_end:
+      \__int_eval:n {#2}
   }
 \cs_new:Npn \@@_set_interline_penalty_auxi:n #1
-  { \etex_interlinepenalties:D \__int_eval:w #1 \__int_eval_end: }
+  { \etex_interlinepenalties:D \__int_eval:n {#1} }
 \cs_new:Npn \@@_set_interline_penalty_auxii:n #1 { }
 %    \end{macrocode}
 % \end{macro}
@@ -2394,19 +2392,21 @@
   }
 \cs_new:Npn \@@_calc_interline_penalties_auxi:n #1
   {
-    \__int_eval:w
+    \__int_eval:n
+      {
         \clist_item:Nn \l_galley_line_penalties_clist {#1}
-      + 0 \clist_item:Nn \l_galley_club_penalties_clist {#1}
-      - \etex_clubpenalties:D #1 ~
-    \__int_eval_end:
+        + 0 \clist_item:Nn \l_galley_club_penalties_clist {#1}
+        - \etex_clubpenalties:D #1 ~
+      }
   }
 \cs_new:Npn \@@_calc_interline_penalties_auxii:n #1
   {
-    \__int_eval:w
+    \__int_eval:n
+      {
         \etex_interlinepenalties:D \etex_interlinepenalties:D 0 \exp_stop_f:
-      + 0 \clist_item:Nn \l_galley_club_penalties_clist {#1}
-      - \etex_clubpenalties:D #1 ~
-    \__int_eval_end:
+        + 0 \clist_item:Nn \l_galley_club_penalties_clist {#1}
+        - \etex_clubpenalties:D #1 ~
+      }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2449,7 +2449,7 @@
       }
   }
 \cs_new:Npn \@@_save_display_club_penalties:n #1
-  { \__int_value:w \etex_clubpenalties:D \__int_eval:w #1 \__int_eval_end: , }
+  { \__int_value:w \etex_clubpenalties:D \__int_eval:n {#1} , }
 \cs_new_protected:Npn \galley_save_display_widow_penalties:N #1
   {
     \clist_set:Nx #1
@@ -2462,7 +2462,7 @@
 \cs_new:Npn \@@_save_display_widow_penalties:n #1
   {
     \__int_value:w \etex_displaywidowpenalties:D
-      \__int_eval:w #1 \__int_eval_end: ,
+      \__int_eval:n {#1} ,
   }
 \cs_new_protected:Npn \galley_save_widow_penalties:N #1
   {
@@ -2474,7 +2474,7 @@
       }
   }
 \cs_new:Npn \@@_save_widow_penalties:n #1
-  { \__int_value:w \etex_widowpenalties:D \__int_eval:w #1 \__int_eval_end: , }
+  { \__int_value:w \etex_widowpenalties:D \__int_eval:n {#1} , }
 %    \end{macrocode}
 %   This one is not an array, but is stored in a primitive, so there is
 %   a simple conversion. The general interline penalty is always the
