--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -3149,7 +3149,7 @@
     \exp_args:Nx \@@_parm_from_arg_count_test:nnF
       {
         \exp_after:wN \exp_not:n
-        \if_case:w \__int_eval:w (#2) \__int_eval_end:
+        \if_case:w \__int_eval:n {#2}
              { }
         \or: { ##1 }
         \or: { ##1##2 }
