--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1091,14 +1091,13 @@
 %   Trimming from the left- and right-hand edges of the box is easy: kern the
 %   appropriate parts off each side.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { {#1} { (#2) } {#3} { (#4) } {#5} }
 \cs_new_protected:Npn \box_trim:Nnnnn #1#2#3#4#5
   {
     \hbox_set:Nn \l_@@_internal_box
       {
-        \tex_kern:D -\__dim_eval:w #2 \__dim_eval_end:
+        \tex_kern:D - \__dim_eval:n {#2}
         \box_use:N #1
-        \tex_kern:D -\__dim_eval:w #4 \__dim_eval_end:
+        \tex_kern:D - \__dim_eval:n {#4}
       }
 %    \end{macrocode}
 %   For the height and depth, there is a need to watch the baseline is
@@ -1158,14 +1157,13 @@
 %   dimensions. As a result, there are some things to watch out for in the
 %   vertical direction.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { {#1} { (#2) } {#3} { (#4) } {#5} }
 \cs_new_protected:Npn \box_viewport:Nnnnn #1#2#3#4#5
   {
     \hbox_set:Nn \l_@@_internal_box
       {
-        \tex_kern:D -\__dim_eval:w #2 \__dim_eval_end:
+        \tex_kern:D - \__dim_eval:n {#2}
         \box_use:N #1
-        \tex_kern:D \__dim_eval:w #4 - \box_wd:N #1 \__dim_eval_end:
+        \tex_kern:D \__dim_eval:n { #4 - \box_wd:N #1 }
       }
     \dim_compare:nNnTF {#3} < \c_zero_dim
       {
@@ -1174,7 +1172,7 @@
             \box_move_down:nn \c_zero_dim
               { \box_use:N \l_@@_internal_box }
           }
-        \box_set_dp:Nn \l_@@_internal_box { -\dim_eval:n {#3} }
+        \box_set_dp:Nn \l_@@_internal_box { - \__dim_eval:n {#3} }
       }
       {
         \hbox_set:Nn \l_@@_internal_box
@@ -1198,7 +1196,7 @@
       {
         \hbox_set:Nn \l_@@_internal_box
           {
-            \box_move_up:nn { -\dim_eval:n {#5} }
+            \box_move_up:nn { - \__dim_eval:n {#5} }
               { \box_use:N \l_@@_internal_box }
           }
         \box_set_ht:Nn \l_@@_internal_box \c_zero_dim
@@ -1338,9 +1336,8 @@
     \hbox_set:Nn \l_@@_internal_box
       {
         \tex_kern:D
-          \__dim_eval:w
-            \l_@@_bounding_shift_dim - \l_@@_left_corner_dim
-          \__dim_eval_end:
+          \__dim_eval:n
+            { \l_@@_bounding_shift_dim - \l_@@_left_corner_dim }
         \box_move_down:nn { \l_@@_bottom_corner_dim }
           { \box_use:N #1 }
       }
@@ -1857,7 +1854,11 @@
 %    \begin{macrocode}
 \cs_if_exist:NTF \pdftex_uniformdeviate:D
   {
-    \__debug_patch_args:nNNpn { { (#1) } { (#2) } }
+    \__debug_patch_args:nNNpn
+      {
+        { \__debug_chk_expr:nNnN {#1} \@@_eval:w { } \int_rand:nn }
+        { \__debug_chk_expr:nNnN {#2} \@@_eval:w { } \int_rand:nn }
+      }
     \cs_new:Npn \int_rand:nn #1#2
       {
         \exp_after:wN \@@_rand:ww
@@ -2261,9 +2262,8 @@
 % \begin{macro}{\sys_gset_rand_seed:n}
 %   The primitive always assigns the seed globally.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { { (#1) } }
 \cs_new_protected:Npn \sys_gset_rand_seed:n #1
-  { \pdftex_setrandomseed:D \__int_eval:w #1 \__int_eval_end: }
+  { \pdftex_setrandomseed:D \__int_eval:n {#1} }
 %    \end{macrocode}
 % \end{macro}
 %
