--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -958,6 +958,16 @@
 %   \end{texnote}
 % \end{function}
 %
+% \begin{function}[EXP]{\__int_eval:n}
+%   \begin{syntax}
+%     \cs{__int_eval:n} \Arg{intexpr}
+%   \end{syntax}
+%   By default this expands to \cs{__int_eval:w} \meta{intexpr}
+%   \cs{__int_eval_end:} but when debugging is enabled this expands to a
+%   more complicated construction that evaluates \meta{intexpr} with
+%   parentheses and within a brace group to detect early termination.
+% \end{function}
+%
 % \begin{function}{\__prg_compare_error:, \__prg_compare_error:Nw}
 %   \begin{syntax}
 %     \cs{__prg_compare_error:}
@@ -1029,6 +1039,17 @@
   { { \__debug_chk_expr:nNnN {#1} \@@_eval:w { } \int_eval:n } }
 \cs_new:Npn \int_eval:n #1
   { \@@_value:w \@@_eval:w #1 \@@_eval_end: }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_eval:n}
+%   Only differ from \cs{int_eval:n} by the absence of \cs{@@_value:w},
+%   so as to produce an internal integer rather than expanding into
+%   characters.  This is for use in other modules.
+%    \begin{macrocode}
+\__debug_patch_args:nNNpn
+  { { \__debug_chk_expr:nNnN {#1} \@@_eval:w { } \@@_eval:n } }
+\cs_new:Npn \@@_eval:n #1 { \@@_eval:w #1 \@@_eval_end: }
 %    \end{macrocode}
 % \end{macro}
 %
