--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -1384,12 +1384,11 @@
 %   pool. Also, it is considerably slower than what we use here so the
 %   few extra csnames are well spent I would say.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { { (#1) } }
 \cs_new:Npn \prg_replicate:nn #1
   {
     \exp:w
       \exp_after:wN \@@_replicate_first:N
-        \__int_value:w \__int_eval:w #1 \__int_eval_end:
+        \__int_value:w \__int_eval:n {#1}
       \cs_end:
   }
 \cs_new:Npn \@@_replicate:N #1
