--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1467,32 +1467,29 @@
       }
     \cs_set_protected:Npn \box_rotate:Nn #1#2
       { \hbox_set:Nn #1 { \rotatebox {#2} { \box_use:N #1 } } }
-    \__debug_patch_args:nNNpn { {#1} { (#2) } { (#3) } }
     \cs_set_protected:Npn \box_resize_to_wd_and_ht_plus_dp:Nnn #1#2#3
       {
         \hbox_set:Nn #1
           {
             \resizebox *
-              { \__dim_eval:w #2 \__dim_eval_end: }
-              { \__dim_eval:w #3 \__dim_eval_end: }
+              { \__dim_eval:n {#2} }
+              { \__dim_eval:n {#3} }
               { \box_use:N #1 }
           }
       }
-    \__debug_patch_args:nNNpn { {#1} { (#2) } }
     \cs_set_protected:Npn \box_resize_to_ht_plus_dp:Nn #1#2
       {
         \hbox_set:Nn #1
           {
-            \resizebox * { ! } { \__dim_eval:w #2 \__dim_eval_end: }
+            \resizebox * { ! } { \__dim_eval:n {#2} }
               { \box_use:N #1 }
           }
       }
-    \__debug_patch_args:nNNpn { {#1} { (#2) } }
     \cs_set_protected:Npn \box_resize_to_wd:Nn #1#2
       {
         \hbox_set:Nn #1
           {
-            \resizebox * { \__dim_eval:w #2 \__dim_eval_end: } { ! }
+            \resizebox * { \__dim_eval:n {#2} } { ! }
               { \box_use:N #1 }
           }
       }
