--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -977,15 +977,12 @@
 %   When debugging, the dimension expression |#2| is surrounded by
 %   parentheses to catch early termination.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { {#1} { (#2) } }
 \cs_new_protected:Npn \box_set_dp:Nn #1#2
-  { \box_dp:N #1 \__dim_eval:w #2 \__dim_eval_end: }
-\__debug_patch_args:nNNpn { {#1} { (#2) } }
+  { \box_dp:N #1 \__dim_eval:n {#2} }
 \cs_new_protected:Npn \box_set_ht:Nn #1#2
-  { \box_ht:N #1 \__dim_eval:w #2 \__dim_eval_end: }
-\__debug_patch_args:nNNpn { {#1} { (#2) } }
+  { \box_ht:N #1 \__dim_eval:n {#2} }
 \cs_new_protected:Npn \box_set_wd:Nn #1#2
-  { \box_wd:N #1 \__dim_eval:w #2 \__dim_eval_end: }
+  { \box_wd:N #1 \__dim_eval:n {#2} }
 \cs_generate_variant:Nn \box_set_ht:Nn { c }
 \cs_generate_variant:Nn \box_set_dp:Nn { c }
 \cs_generate_variant:Nn \box_set_wd:Nn { c }
@@ -1016,18 +1013,14 @@
 %   When debugging, the dimension expression |#1| is surrounded by
 %   parentheses to catch early termination.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { { (#1) } {#2} }
 \cs_new_protected:Npn \box_move_left:nn #1#2
-  { \tex_moveleft:D \__dim_eval:w #1 \__dim_eval_end: #2 }
-\__debug_patch_args:nNNpn { { (#1) } {#2} }
+  { \tex_moveleft:D \__dim_eval:n {#1} #2 }
 \cs_new_protected:Npn \box_move_right:nn #1#2
-  { \tex_moveright:D \__dim_eval:w #1 \__dim_eval_end: #2 }
-\__debug_patch_args:nNNpn { { (#1) } {#2} }
+  { \tex_moveright:D \__dim_eval:n {#1} #2 }
 \cs_new_protected:Npn \box_move_up:nn #1#2
-  { \tex_raise:D \__dim_eval:w #1 \__dim_eval_end: #2 }
-\__debug_patch_args:nNNpn { { (#1) } {#2} }
+  { \tex_raise:D \__dim_eval:n {#1} #2 }
 \cs_new_protected:Npn \box_move_down:nn #1#2
-  { \tex_lower:D \__dim_eval:w #1 \__dim_eval_end: #2 }
+  { \tex_lower:D \__dim_eval:n {#1} #2 }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1229,23 +1222,16 @@
 %   Storing material in a horizontal box with a specified width.
 %   Again, put the dimension expression in parentheses when debugging.
 %    \begin{macrocode}
-\__debug_patch_args:nnnNNpn
-  { \__debug_chk_var_local:N #1 }
-  { }
-  { {#1} { (#2) } {#3} }
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \hbox_set_to_wd:Nnn #1#2#3
   {
-    \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:w #2 \__dim_eval_end:
+    \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:n {#2}
       { \group_begin: #3 \group_end: }
   }
-\__debug_patch_args:nnnNNpn
-  { \__debug_chk_var_global:N #1 }
-  { }
-  { {#1} { (#2) } {#3} }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \hbox_gset_to_wd:Nnn #1#2#3
   {
-    \tex_global:D \tex_setbox:D #1 \tex_hbox:D
-      to \__dim_eval:w #2 \__dim_eval_end:
+    \tex_global:D \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:n {#2}
       { \group_begin: #3 \group_end: }
   }
 \cs_generate_variant:Nn \hbox_set_to_wd:Nnn { c }
@@ -1292,24 +1278,17 @@
 % \begin{macro}{\hbox_gset_to_wd:Nnw, \hbox_gset_to_wd:cnw}
 %   Combining the above ideas.
 %    \begin{macrocode}
-\__debug_patch_args:nnnNNpn
-  { \__debug_chk_var_local:N #1 }
-  { }
-  { {#1} { (#2) } }
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \hbox_set_to_wd:Nnw #1#2
   {
-    \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:w #2 \__dim_eval_end:
+    \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:n {#2}
       \c_group_begin_token
         \group_begin:
   }
-\__debug_patch_args:nnnNNpn
-  { \__debug_chk_var_global:N #1 }
-  { }
-  { {#1} { (#2) } }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \hbox_gset_to_wd:Nnw #1#2
   {
-    \tex_global:D \tex_setbox:D #1 \tex_hbox:D
-      to \__dim_eval:w #2 \__dim_eval_end:
+    \tex_global:D \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:n {#2}
       \c_group_begin_token
         \group_begin:
   }
@@ -1324,10 +1303,9 @@
 %  \testfile*
 %   Put a horizontal box directly into the input stream.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { { (#1) } {#2} }
 \cs_new_protected:Npn \hbox_to_wd:nn #1#2
    {
-     \tex_hbox:D to \__dim_eval:w #1 \__dim_eval_end:
+     \tex_hbox:D to \__dim_eval:n {#1}
        { \group_begin: #2 \group_end: }
    }
 \cs_new_protected:Npn \hbox_to_zero:n #1
@@ -1385,10 +1363,9 @@
 % \testfile*
 %   Put a vertical box directly into the input stream.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { { (#1) } {#2} }
 \cs_new_protected:Npn \vbox_to_ht:nn #1#2
   {
-    \tex_vbox:D to \__dim_eval:w #1 \__dim_eval_end:
+    \tex_vbox:D to \__dim_eval:n {#1}
       { \group_begin: #2 \par \group_end: }
   }
 \cs_new_protected:Npn \vbox_to_zero:n #1
@@ -1452,23 +1429,16 @@
 %  \testfile*
 %  Storing material in a vertical box with a specified height.
 %    \begin{macrocode}
-\__debug_patch_args:nnnNNpn
-  { \__debug_chk_var_local:N #1 }
-  { }
-  { {#1} { (#2) } {#3} }
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set_to_ht:Nnn #1#2#3
   {
-    \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:w #2 \__dim_eval_end:
+    \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:n {#2}
       { \group_begin: #3 \par \group_end: }
   }
-\__debug_patch_args:nnnNNpn
-  { \__debug_chk_var_global:N #1 }
-  { }
-  { {#1} { (#2) } {#3} }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \vbox_gset_to_ht:Nnn #1#2#3
   {
-    \tex_global:D \tex_setbox:D #1 \tex_vbox:D
-      to \__dim_eval:w #2 \__dim_eval_end:
+    \tex_global:D \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:n {#2}
       { \group_begin: #3 \par \group_end: }
   }
 \cs_generate_variant:Nn \vbox_set_to_ht:Nnn  { c }
@@ -1516,24 +1486,17 @@
 % \begin{macro}{\vbox_gset_to_ht:Nnw, \vbox_gset_to_ht:cnw}
 %   A combination of the above ideas.
 %    \begin{macrocode}
-\__debug_patch_args:nnnNNpn
-  { \__debug_chk_var_local:N #1 }
-  { }
-  { {#1} { (#2) } }
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set_to_ht:Nnw #1#2
   {
-    \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:w #2 \__dim_eval_end:
+    \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:n {#2}
       \c_group_begin_token
         \group_begin:
   }
-\__debug_patch_args:nnnNNpn
-  { \__debug_chk_var_global:N #1 }
-  { }
-  { {#1} { (#2) } }
+\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \vbox_gset_to_ht:Nnw #1#2
   {
-    \tex_global:D \tex_setbox:D #1 \tex_vbox:D
-      to \__dim_eval:w #2 \__dim_eval_end:
+    \tex_global:D \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:n {#2}
       \c_group_begin_token
         \group_begin:
   }
@@ -1560,12 +1523,9 @@
 % \testfile*
 %   Splitting a vertical box in two.
 %    \begin{macrocode}
-\__debug_patch_args:nnnNNpn
-  { \__debug_chk_var_local:N #1 }
-  { }
-  { {#1} {#2} { (#3) } }
+\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set_split_to_ht:NNn #1#2#3
-  { \tex_setbox:D #1 \tex_vsplit:D #2 to \__dim_eval:w #3 \__dim_eval_end: }
+  { \tex_setbox:D #1 \tex_vsplit:D #2 to \__dim_eval:n {#3} }
 %    \end{macrocode}
 % \end{macro}
 %
