--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -1227,7 +1227,7 @@
   }
 \cs_new_protected:Npn \@@_item_catcode:nT #1
   {
-    \if_int_odd:w \__int_eval:w #1 / \@@_item_catcode: \__int_eval_end:
+    \if_int_odd:w \__int_eval:n { #1 / \@@_item_catcode: }
       \exp_after:wN \use:n
     \else:
       \exp_after:wN \use_none:n
@@ -1665,9 +1665,8 @@
     \if_int_compare:w 1 < "1 \token_to_str:N #1 \exp_stop_f:
       #1 \prg_return_true:
     \else:
-      \if_case:w \__int_eval:w
-          \exp_after:wN ` \token_to_str:N #1 - `a
-        \__int_eval_end:
+      \if_case:w
+        \__int_eval:n { \exp_after:wN ` \token_to_str:N #1 - `a }
            A
       \or: B
       \or: C
@@ -3097,7 +3096,7 @@
   }
 \cs_new_protected:Npn \@@_compile_c_lbrack_add:N #1
   {
-    \if_int_odd:w \__int_eval:w \l_@@_catcodes_int / #1 \__int_eval_end:
+    \if_int_odd:w \__int_eval:n { \l_@@_catcodes_int / #1 }
     \else:
       \int_add:Nn \l_@@_catcodes_int {#1}
     \fi:
@@ -4095,7 +4094,7 @@
       \l_@@_right_state_int \l_@@_max_state_int
     \int_set_eq:NN \l_@@_internal_a_int \l_@@_left_state_int
     \int_set_eq:NN \l_@@_internal_b_int \l_@@_max_state_int
-    \if_int_compare:w \__int_eval:w #1 > 1 \exp_stop_f:
+    \if_int_compare:w \__int_eval:n {#1} > 1 \exp_stop_f:
       \int_set:Nn \l_@@_internal_c_int
         {
           ( #1 - 1 )
@@ -4825,7 +4824,7 @@
 \cs_new_protected:Npn \@@_action_cost:n #1
   {
     \exp_args:No \@@_store_state:n
-      { \__int_value:w \__int_eval:w \l_@@_curr_state_int + #1 }
+      { \__int_value:w \__int_eval:n { \l_@@_curr_state_int + #1 } }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -5047,7 +5046,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_submatch_balance:n #1
   {
-    \__int_eval:w
+    \__int_eval:n
+     {
       \int_compare:nNnTF
         { \__intarray_item_fast:Nn \g_@@_submatch_end_intarray {#1} } = 0
         { 0 }
@@ -5063,7 +5063,7 @@
           \__intarray_item_fast:Nn \g_@@_balance_intarray
             { \__intarray_item_fast:Nn \g_@@_submatch_begin_intarray {#1} }
         }
-    \__int_eval_end:
+     }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -5207,7 +5207,7 @@
       \__tl_build_one:n { \@@_query_submatch:n { #1 + ##1 } }
       \if_int_compare:w \l_@@_replacement_csnames_int = 0 \exp_stop_f:
         \tl_put_right:Nn \l_@@_balance_tl
-          { + \@@_submatch_balance:n { \__int_eval:w #1+##1 \__int_eval_end: } }
+          { + \@@_submatch_balance:n { \__int_eval:n { #1+##1 } } }
       \fi:
     \fi:
   }
