--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -932,13 +932,11 @@
 %   \texttt{sp}, we must define |#1| to be the integer expression to be
 %   multiplied, and |#2| to be the (real) scaling factor.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { { (#1) } {#2} }
 \cs_new:Npn \int_mul_truncate:nn #1 #2
   {
     \__int_value:w
-      \__dim_eval:w
-        #2 \__dim_eval:w \__int_eval:w #1 \__int_eval_end: sp \__dim_eval_end:
-      \__dim_eval_end:
+      \__dim_eval:n
+        { #2 \__dim_eval:n { \__int_eval:n {#1} sp } }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1139,7 +1137,7 @@
   }
 \prg_new_conditional:Npnn \__char_if_in_font:nN #1#2 { TF }
   {
-    \etex_iffontchar:D #2 \__int_eval:w #1 \__int_eval_end:
+    \etex_iffontchar:D #2 \__int_eval:n {#1}
       \prg_return_true:
     \else:
       \prg_return_false:
@@ -1170,12 +1168,10 @@
 %   overall \meta{skipexpr} is closed by \cs{scan_stop:} inserted by our
 %   auxiliary.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { { (#1) } }
 \cs_new:Npn \skip_abs:n #1
   {
     \skip_use:N \etex_glueexpr:D
-      \exp_after:wN \skip_abs_aux:wwN
-      \skip_use:N \etex_glueexpr:D #1 \scan_stop:
+      \exp_last_unbraced:Nf \skip_abs_aux:wwN { \skip_eval:n {#1} }
       \use_none:nn \scan_stop: \skip_abs_aux:wwN
       - \scan_stop: { }
   }
@@ -1299,12 +1295,10 @@
 %   This relies on the same auxiliary as \cs{skip_abs:n}.  See this
 %   function for an explanation of the code.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { { (#1) } }
 \cs_new:Npn \muskip_abs:n #1
   {
     \muskip_use:N \etex_muexpr:D
-      \exp_after:wN \skip_abs_aux:wwN
-      \muskip_use:N \etex_muexpr:D #1 \scan_stop:
+      \exp_last_unbraced:Nf \skip_abs_aux:wwN { \muskip_eval:n {#1} }
       \use_none:nn \scan_stop: \skip_abs_aux:wwN
       - \scan_stop: { }
   }
