Turn on check-declarations in all test files (except some m3expl)
This lead to detecting a couple minor bugs/misuses.

--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -1069,34 +1069,64 @@
 % \begin{macro}{\@@_recover_vars:n}
 %   Recovering the stored data for a template is rather less complex
 %   than storing it. All that happens is the data is  transferred from
-%   the permanent to the scratch storage.
+%   the permanent to the scratch storage.  However, we need to check the
+%   scratch storage does exist.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_recover_defaults:n #1
   {
-    \prop_set_eq:Nc \l_@@_values_prop
+    \prop_if_exist:cTF
       { \c_@@_defaults_root_tl #1 }
+      {
+        \prop_set_eq:Nc \l_@@_values_prop
+          { \c_@@_defaults_root_tl #1 }
+      }
+      { \prop_clear:N \l_@@_values_prop }
   }
 \cs_new_protected:Npn \@@_recover_keytypes:n #1
   {
-    \prop_set_eq:Nc \l_@@_keytypes_prop
+    \prop_if_exist:cTF
       { \c_@@_keytypes_root_tl #1 }
-    \seq_set_eq:Nc \l_@@_key_order_seq
-      { \c_@@_key_order_root_tl #1 }
+      {
+        \prop_set_eq:Nc \l_@@_keytypes_prop
+          { \c_@@_keytypes_root_tl #1 }
+      }
+      { \prop_clear:N \l_@@_keytypes_prop }
+    \seq_if_exist:cTF { \c_@@_key_order_root_tl #1 }
+      {
+        \seq_set_eq:Nc \l_@@_key_order_seq
+          { \c_@@_key_order_root_tl #1 }
+      }
+      { \seq_clear:N \l_@@_key_order_seq }
   }
 \cs_new_protected:Npn \@@_recover_restrictions:n #1
   {
-    \clist_set_eq:Nc \l_@@_restrict_clist
+    \clist_if_exist:cTF
       { \c_@@_restrict_root_tl #1 }
+      {
+        \clist_set_eq:Nc \l_@@_restrict_clist
+          { \c_@@_restrict_root_tl #1 }
+      }
+      { \clist_clear:N \l_@@_restrict_clist }
   }
 \cs_new_protected:Npn \@@_recover_values:n #1
   {
-    \prop_set_eq:Nc \l_@@_values_prop
+    \prop_if_exist:cTF
       { \c_@@_values_root_tl #1 }
+      {
+        \prop_set_eq:Nc \l_@@_values_prop
+          { \c_@@_values_root_tl #1 }
+      }
+      { \prop_clear:N \l_@@_values_prop }
   }
 \cs_new_protected:Npn \@@_recover_vars:n #1
   {
-    \prop_set_eq:Nc \l_@@_vars_prop
+    \prop_if_exist:cTF
       { \c_@@_vars_root_tl #1 }
+      {
+        \prop_set_eq:Nc \l_@@_vars_prop
+          { \c_@@_vars_root_tl #1 }
+      }
+      { \prop_clear:N \l_@@_vars_prop }
   }
 %    \end{macrocode}
 % \end{macro}
