Remove old comment

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2495,7 +2495,7 @@
 % \begin{variable}{\q_@@_act_mark, \q_@@_act_stop}
 %   The \cs{tl_act} functions may be applied to any token list.
 %   Hence, we use two private quarks, to allow any token, even quarks,
-%   in the token list.^^A in particular critical for future \::e.
+%   in the token list.
 %   Only \cs{q_@@_act_mark} and \cs{q_@@_act_stop} may not appear
 %   in the token lists manipulated by \cs{@@_act:NNNnn} functions. The quarks
 %   are effectively defined in \pkg{l3quark}.
