--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: source3body.tex Copyright (C) 1990-2015,2017 The LaTeX3 Project
+%% File: source3body.tex Copyright (C) 1990-2012,2014-2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
