--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3tree.dtx (C) Copyright 2012,2016-2017 The LaTeX3 Project
+%% File l3tree.dtx (C) Copyright 2012-2014,2016-2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
