Remove final SVN links from .tex files [ci skip]
Again, l3trial, etc., are not coverex.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -551,9 +551,9 @@
 % \end{macro}
 %
 % \begin{macro}[int]{\@@_color_select:n, \@@_color_select:V}
-% \begin{macro}[aux, EXP]{\@@_convert_model:w}
-% \begin{macro}[aux, EXP]{\@@_color_convert_spot:}
-% \begin{macro}[aux, EXP]{\@@_color_convert_spot:w}
+% \begin{macro}[EXP]{\@@_convert_model:w}
+% \begin{macro}[EXP]{\@@_color_convert_spot:}
+% \begin{macro}[EXP]{\@@_color_convert_spot:w}
 % \begin{macro}[aux]{\@@_color_reset:}
 %   Mainly no conversation but a little work with \texttt{spot} colors as they
 %   can't have a tint level here! The easy route of just picking up
@@ -657,8 +657,8 @@
 % \end{variable}
 %
 % \begin{macro}[int]{\@@_color_select:n, \@@_color_select:V}
-% \begin{macro}[aux, EXP]{\@@_color_convert:w}
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]{\@@_color_convert:w}
+% \begin{macro}[EXP]
 %   {
 %     \@@_color_convert_gray:w ,
 %     \@@_color_convert_cmyk:w ,
@@ -756,7 +756,7 @@
 %
 % \subsection{Driver-specific auxiliaries}
 %
-% \begin{macro}[int, EXP]{\@@_absolute_lengths:n}
+% \begin{macro}[EXP]{\@@_absolute_lengths:n}
 %   The \texttt{dvips} driver scales all absolute dimensions based
 %   on the output resolution selected and any \TeX{} magnification. Thus
 %   for any operation involving absolute lengths there is a correction to
@@ -1824,7 +1824,7 @@
 % \begin{macro}[aux]{\@@_image_getbb_auxiii:nNnn}
 % \begin{macro}[aux]{\@@_image_getbb_auxiv:nnNnn, \@@_image_getbb_auxiv:VnNnn}
 % \begin{macro}[aux]{\@@_image_getbb_auxv:nNnn, \@@_image_getbb_auxv:nNnn}
-% \begin{macro}[aux, EXP]{\@@_image_getbb_pagebox:w}
+% \begin{macro}[EXP]{\@@_image_getbb_pagebox:w}
 %   For \texttt{xdvipdfmx}, there are two primitives that allow us to obtain
 %   the bounding box without needing \texttt{extractbb}. The only complexity
 %   is passing the various minor variations to a common core process. The
