--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -865,8 +865,8 @@
 % One exception to this rule is \cs{::p}, which has to grab an argument
 % delimited by a left brace.
 %
-% \begin{macro}[aux, EXP]{\@@_arg_next:nnn}
-% \begin{macro}[aux, EXP]{\@@_arg_next:Nnn}
+% \begin{macro}[EXP]{\@@_arg_next:nnn}
+% \begin{macro}[EXP]{\@@_arg_next:Nnn}
 %   |#1| is the result of an expansion step, |#2| is the remaining
 %   argument manipulations and |#3| is the current result of the
 %   expansion chain.  This auxiliary function moves |#1| back after
@@ -890,7 +890,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\::n}
+% \begin{macro}[EXP]{\::n}
 %   This function is used to skip an argument that doesn't need to
 %   be expanded.
 %    \begin{macrocode}
@@ -898,7 +898,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\::N}
+% \begin{macro}[EXP]{\::N}
 %   This function is used to skip an argument that consists of a
 %   single token and doesn't need to be expanded.
 %    \begin{macrocode}
@@ -906,7 +906,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\::p}
+% \begin{macro}[EXP]{\::p}
 %   This function is used to skip an argument that is delimited by a
 %   left brace and doesn't need to be expanded.  It is not
 %   wrapped in braces in the result.
@@ -915,7 +915,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\::c}
+% \begin{macro}[EXP]{\::c}
 %   This function is used to skip an argument that is turned into
 %   a control sequence without expansion.
 %    \begin{macrocode}
@@ -924,7 +924,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\::o}
+% \begin{macro}[EXP]{\::o}
 %   This function is used to expand an argument once.
 %    \begin{macrocode}
 \cs_new:Npn \::o #1 \::: #2#3
@@ -932,7 +932,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\::f}
+% \begin{macro}[EXP]{\::f}
 % \begin{macro}{\exp_stop_f:}
 %   This function is used to expand a token list until the first
 %   unexpandable token is found. This is achieved through \cs{exp:w}
@@ -971,8 +971,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\::v}
-% \begin{macro}[int, EXP]{\::V}
+% \begin{macro}[EXP]{\::v}
+% \begin{macro}[EXP]{\::V}
 %   These functions return the value of a register, i.e., one of
 %   |tl|, |clist|, |int|, |skip|, |dim|, |muskip|, or built-in
 %   \TeX{} register. The |V| version
@@ -998,8 +998,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_eval_register:N, \@@_eval_register:c}
-% \begin{macro}[aux, EXP]{\@@_eval_error_msg:w}
+% \begin{macro}[EXP]{\@@_eval_register:N, \@@_eval_register:c}
+% \begin{macro}[EXP]{\@@_eval_error_msg:w}
 %   This function evaluates a register. Now a register might exist as
 %   one of two things: A parameter-less macro or a built-in \TeX{}
 %   register such as |\count|. For the \TeX{} registers we have to
@@ -1324,12 +1324,12 @@
 %
 % \subsection{Last-unbraced versions}
 %
-% \begin{macro}[aux, EXP]{\@@_arg_last_unbraced:nn}
-% \begin{macro}[aux, EXP]{\::o_unbraced}
-% \begin{macro}[aux, EXP]{\::V_unbraced}
-% \begin{macro}[aux, EXP]{\::v_unbraced}
-% \begin{macro}[aux, EXP]{\::f_unbraced}
-% \begin{macro}[aux, EXP]{\::x_unbraced}
+% \begin{macro}[EXP]{\@@_arg_last_unbraced:nn}
+% \begin{macro}[EXP]{\::o_unbraced}
+% \begin{macro}[EXP]{\::V_unbraced}
+% \begin{macro}[EXP]{\::v_unbraced}
+% \begin{macro}[EXP]{\::f_unbraced}
+% \begin{macro}[EXP]{\::x_unbraced}
 %   There are a few places where the last argument needs to be available
 %   unbraced. First some helper macros.
 %    \begin{macrocode}
@@ -1430,7 +1430,7 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\exp_last_two_unbraced:Noo}
-% \begin{macro}[EXP, aux]{\@@_last_two_unbraced:noN}
+% \begin{macro}[EXP]{\@@_last_two_unbraced:noN}
 %   If |#2| is a single token then this can be implemented as
 %   \begin{verbatim}
 %     \cs_new:Npn \exp_last_two_unbraced:Noo #1 #2 #3
@@ -1726,7 +1726,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, rEXP]
+% \begin{macro}[rEXP]
 %   {
 %     \@@_generate_variant_loop:nNwN,
 %     \@@_generate_variant_loop_base:N,
@@ -1901,7 +1901,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, rEXP]{\@@_generate_variant_same:N}
+% \begin{macro}[rEXP]{\@@_generate_variant_same:N}
 %   When the base and variant letters are identical, don't do any
 %   expansion.  For most argument types, we can use the |n|-type
 %   no-expansion, but the |N| and |p| types require a slightly different
@@ -1960,7 +1960,7 @@
 %
 % \begin{macro}[int]{\@@_generate_internal_variant:n}
 % \begin{macro}[aux]{\@@_generate_internal_variant:wwnw}
-% \begin{macro}[aux, rEXP]{\@@_generate_internal_variant_loop:n}
+% \begin{macro}[rEXP]{\@@_generate_internal_variant_loop:n}
 %   Test if |\exp_args:N #1| is already defined and if not define it via
 %   the |\::| commands using the chars in |#1|.  If |#1| contains an |x|
 %   (this is the place where having converted the original comma-list
