--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -843,7 +843,7 @@
 %
 % \begin{macro}[int]{\__file_name_sanitize:nN}
 % \begin{macro}[int]{\__file_name_quote:nN}
-% \begin{macro}[int, aux]{\@@_name_sanitize_aux:n}
+% \begin{macro}[aux]{\@@_name_sanitize_aux:n}
 %   For converting a token list to a string where active characters are treated
 %   as strings from the start. The logic to the quoting normalisation is the
 %   same as used by \texttt{lualatexquotejobname}: check for balanced |"|, and
@@ -1092,7 +1092,7 @@
 % \end{macro}
 %
 % \begin{macro}{\file_show_list:, \file_log_list:}
-% \begin{macro}[aux, EXP]{\@@_list_aux:n}
+% \begin{macro}[EXP]{\@@_list_aux:n}
 %   A function to list all files used to the log, without duplicates.
 %   In package mode, if \cs{@filelist} is still defined, we need to take
 %   this list of file names into account (we capture it
@@ -1872,8 +1872,8 @@
 % \end{variable}
 %
 % \begin{macro}{\iow_indent:n}
-% \begin{macro}[EXP,aux]{\@@_indent:n}
-% \begin{macro}[EXP,aux]{\@@_indent_error:n}
+% \begin{macro}[EXP]{\@@_indent:n}
+% \begin{macro}[EXP]{\@@_indent_error:n}
 %   We set \cs{iow_indent:n} to produce an error when outside
 %   messages. Within wrapped message, it is set to \cs{@@_indent:n} when
 %   valid and otherwise to \cs{@@_indent_error:n}.  The first places the
@@ -2036,7 +2036,7 @@
 % \end{macro}
 %
 % \begin{macro}[aux]{\@@_wrap_line:nw}
-% \begin{macro}[EXP,aux]
+% \begin{macro}[EXP]
 %   {
 %     \@@_wrap_line_loop:w,
 %     \@@_wrap_line_aux:Nw,
@@ -2126,8 +2126,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP,aux]{\@@_wrap_break:w}
-% \begin{macro}[EXP,aux]
+% \begin{macro}[EXP]{\@@_wrap_break:w}
+% \begin{macro}[EXP]
 %   {
 %     \@@_wrap_break_first:w,
 %     \@@_wrap_break_none:w,
@@ -2287,7 +2287,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP, aux]{\@@_wrap_trim:N, \@@_wrap_trim:w}
+% \begin{macro}[EXP]{\@@_wrap_trim:N, \@@_wrap_trim:w}
 %   Remove one trailing \enquote{other} space from the argument.
 %    \begin{macrocode}
 \cs_set_protected:Npn \@@_tmp:w #1
